Fail Fast Principle, ensure that GriddingSheet is valid, before everything else is executed.